Full Brinder-match-api and swagger adapt
