# brinder-match-api/src/main/java/org/gso/brinder/match/model/GeoCoordinates.java
@@ -1,0 +1,14 @@
+package org.gso.brinder.match.model;
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@Data
+@AllArgsConstructor
+@NoArgsConstructor
+public class GeoCoordinates {
+
+    private double latitude;
+    private double longitude;
+}
